Fixed quite a few things/made necessary changes

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -184,7 +184,7 @@ h3 {
   display: block;
   height: 77px;
   width: 885px;
-  animation-duration: 0.7;
+  animation-duration: 0.7s;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center; 
